@@ -1,3 +1,4 @@
+* Add LRU memoization, use it to cache compiled code for safe_eval.
 * Add PySON to replace python string evaluation on client side
 * Add JSON-RPC
 * Add groups on Sequence Types and add rules on sequence based on it.
